@@ -18,7 +18,12 @@ package com.sun.jna;
  * passed to its {@link #callback} method.
  */
 public interface CallbackProxy extends Callback {
+    /** This is the callback method invoked from native code. 
+     * It must <em>not</em> throw any exceptions whatsoever.
+     */
     Object callback(Object[] args);
+    /** Returns the types of the parameters to the callback method. */
     Class[] getParameterTypes();
+    /** Returns the type of the callback method's return value. */
     Class getReturnType();
 }
